# context-casial-xpress

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  BENCHMARKS.md  Cargo.toml  Dockerfile  ENHANCEMENT_COMPLETION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  LICENSING.md  MCP_CAPABILITIES_IMPLEMENTATION.md  MOP_ONBOARDING_PROMPT.md  NOTICE  ORCHESTRATED_SWARMS_WHITEPAPER.md  RAILWAY_PORT_CONFIG.md  README.md  REBRANDING_COMPLETE.md  SMITHERY_INTEGRATION.md  TRUSTED_PUBLISHING_SETUP.md  WARP.md  claude_desktop_config_direct.json  claude_desktop_config_example.json  railway-start.sh  railway.toml  smithery-metadata.json  smithery.yaml  test-smithery-compatibility.sh  test_mop_curl_commands.sh
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
bench/: sse_keep_alive.js  tools_call_rps.js  ws_connect_storm.js
crates/: LICENSE.md
crates/casial-core/: Cargo.toml  README.md
crates/casial-core/src/: paradox.rs
crates/casial-server/: Cargo.toml
crates/casial-server/src/: client.rs  config.rs  federation.rs  http_mcp.rs  main.rs  metrics.rs  pitfall_shim.rs  registry.rs  websocket.rs
crates/casial-wasm/: Cargo.toml  build.rs
crates/casial-wasm/src/: lib.rs
docs/: README.md  SAMPLING_CONTRACT.md
docs/api/: pitfall-shim.md
docs/deployment/: smithery.md
docs/gtm/: TEASER.md
docs/integrations/: exa-mcp.md
docs/research/rust-cli-book/: action-items.md  summary.md
docs/tutorials/: quickstart.md
examples/: exa-orchestration-example.json  orchestration-demo.md  ubiquity-mission.yaml
examples/templates/: company-analysis.yaml  research-context.md
missions/: exa-mcp-orchestration.yaml  github-mcp-orchestration.yaml
publish/: publication_status.md  publish_order.txt  verification_report.md  verification_report_v0.1.3.md
scripts/: publish-crates.sh
