[workspace]
members = [
    "crates/casial-core",
    "crates/casial-server", 
    "crates/casial-wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.75.0"  # Specify minimum supported Rust version
# Mixed licensing: casial-core uses MIT/Apache-2.0, others use Fair Use
authors = ["Prompted LLC <hello@promptedllc.com>"]
repository = "https://github.com/prompted365/meta-orchestration-protocol"
homepage = "https://promptedllc.com"
documentation = "https://docs.rs/casial-core"
description = "Meta-Orchestration Protocol (MOP) - Consciousness-aware context coordination for AI agent systems - A Ubiquity OS component"
keywords = ["ai", "agents", "consciousness", "coordination", "mcp"]
categories = ["development-tools", "web-programming", "api-bindings", "concurrency"]
readme = "README.md"

[workspace.dependencies]
# Core serialization and error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"

# High-performance data structures
ahash = { version = "0.8", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.0"

# Async runtime and networking
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "fs", "net"] }
tokio-tungstenite = "0.24"
futures = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# File system operations
notify = "6.1"
walkdir = "2.5"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde", "js"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Text processing and similarity
regex = "1.10"
similar = "2.5"
unicode-segmentation = "1.11"

# Random number generation (needed for WASM support)
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0

[patch.crates-io]
# Keep dependencies lean for production builds