[package]
name = "casial-core"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Consciousness-aware context coordination engine - The Casial substrate for paradox-resilient context management"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Performance
ahash = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Text processing
regex = { workspace = true }
similar = { workspace = true }
unicode-segmentation = { workspace = true }

[features]
default = ["std"]
std = []
wasm = ["js-sys", "web-sys"]

[dependencies.js-sys]
workspace = true
optional = true

[dependencies.web-sys]
workspace = true 
optional = true