[package]
name = "casial-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE.md"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "High-performance WebSocket MCP server with consciousness-aware context coordination for AI agent systems"
keywords = ["server", "websocket", "mcp", "ai", "agents"]
categories = ["web-programming", "network-programming", "development-tools"]

[[bin]]
name = "casial-server"
path = "src/main.rs"

[dependencies]
# Core casial functionality
casial-core = { path = "../casial-core", version = "0.1.4" }

# Core utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async runtime and networking
tokio = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tokio-stream = "0.1"

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = "1.0"

# High-performance data structures
ahash = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# File system operations
notify = { workspace = true }
walkdir = { workspace = true }

# Time and configuration
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }

# CLI
clap = { workspace = true }

# JSON Schema validation
jsonschema = "0.18"

# WebSocket client for downstream connections  
url = "2.5"

# Cryptographic hashing
sha2 = "0.10"

# System information
hostname = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

# Lazy static initialization
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
